@@ -1463,7 +1463,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     GROUPBOX        "Active Cheats",201,3,1,133,168,WS_TABSTOP
     GROUPBOX        "Cheat Search",202,139,1,238,168,WS_TABSTOP
-    LISTBOX         IDC_LIST_CHEATS,12,14,115,110,WS_VSCROLL
+    LISTBOX         IDC_LIST_CHEATS,12,14,115,110,LBS_EXTENDEDSEL | WS_VSCROLL
     LTEXT           "Address:",IDC_STATIC,12,134,28,10
     LTEXT           "Value:",IDC_STATIC,85,134,21,10
     LTEXT           "Name:",IDC_STATIC,12,118,22,10
